small changes in service part (index)

--- a/labdhi.aikyam.agency/assets/css/style.css
+++ b/labdhi.aikyam.agency/assets/css/style.css
@@ -8621,3 +8621,13 @@ img {
   border: 0;
 }
 /* map */
+
+/* service */
+.service-para{
+  color: white;
+}
+
+.service-dt{
+  color:black
+}
+/* service */
