--- a/labdhi.aikyam.agency/assets/css/style.css
+++ b/labdhi.aikyam.agency/assets/css/style.css
@@ -8566,6 +8566,16 @@ img {
   }
 }
 
+.menu-item-has-children > a .fa-angle-down {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.menu-item-has-children.open > a .fa-angle-down {
+  transform: rotate(180deg);
+}
+
+
 /* navbar */
 
 /* companies */
@@ -8712,6 +8722,19 @@ img {
 .owl-dot.active {
   opacity: 1;
 }
+
+.service-icon {
+  background-color: rgba(40, 85, 124, 0.85); /* same as overlay bg */
+  color: white;
+  padding: 0.50rem 0.50rem;
+  border-radius: 0.25rem;
+  font-size: 1.2rem;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
+
 /* services */
 
 /* map */
@@ -8751,3 +8774,51 @@ img {
 }
 
 /* brands */
+
+/* contact */
+/* Make row flex so columns align in equal height */
+.contact-flex {
+    display: flex;
+    align-items: stretch;
+}
+
+/* Ensure children fill available height */
+.contact-flex .col {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Map should expand fully */
+.map-wrapper {
+    flex: 1;
+    display: flex;
+}
+
+.contact-map {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* contact */
+
+/* footer */
+.ff {
+  padding: 0 15px; /* small padding by default */
+}
+
+/* For bigger screens (desktop/tablet) */
+@media (min-width: 768px) {
+  .ff {
+    padding: 0 30px; /* bigger padding on bigger screens */
+  }
+}
+
+/* For very large screens, you can even increase padding more */
+@media (min-width: 1200px) {
+  .ff {
+    padding: 0 100px;
+  }
+}
+
+/* footer */
